Fix mobile UI: increase spacing and prevent emoji rendering

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
         <div class="task-card" id="infoCardMobile" style="display: none;">
             <div class="header" style="padding-left: 6.5px;">
-                <div style="display: flex; align-items: center; gap: 1px;">
+                <div style="display: flex; align-items: center; gap: 6px;">
                     <span style="font-size: 1.5em; line-height: 0.8;">☻</span>
                     <span style="text-transform: none; position: relative; top: 1px;">Kanball</span>
                 </div>
@@ -136,7 +136,8 @@
             </div>
 
             <div class="footer">
-                <a href="https://www.instagram.com/para.solente/" target="_blank">Contacto ↗</a>
+                <a href="https://www.instagram.com/para.solente/" target="_blank"
+                    style="text-decoration: none;">Contacto <span style="font-family: Arial, sans-serif;">↗</span></a>
             </div>
         </div>
     </div>
