Remove arrow and add underline to mobile contact link

--- a/index.html
+++ b/index.html
@@ -136,8 +136,7 @@
             </div>
 
             <div class="footer">
-                <a href="https://www.instagram.com/para.solente/" target="_blank"
-                    style="text-decoration: none;">Contacto <span style="font-family: Arial, sans-serif;">↗</span></a>
+                <a href="https://www.instagram.com/para.solente/" target="_blank">Contacto</a>
             </div>
         </div>
     </div>
